<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="karelle.env.royal.WelcomeActivity">
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/logoutlogo"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_main"
        android:icon="@drawable/logomenuother"
        android:orderInCategory="110"
        android:title="@string/action_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/cartlogo"
        android:orderInCategory="120"
        android:title="@string/action_cart"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_locate"
        android:icon="@drawable/locatelogo"
        android:orderInCategory="130"
        android:title="@string/action_locate"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_tracker"
        android:icon="@drawable/icontracker"
        android:orderInCategory="140"
        android:title="@string/action_tracker"
        app:showAsAction="always" />
</menu>
