<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="karelle.env.royal.MainActivity">
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        android:icon="@drawable/logoutlogo"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_home"
        android:orderInCategory="110"
        android:title="@string/action_home"
        android:icon="@drawable/homelogo"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_cart"
        android:orderInCategory="120"
        android:title="@string/action_cart"
        android:icon="@drawable/cartlogo"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_locate"
        android:orderInCategory="130"
        android:title="@string/action_locate"
        android:icon="@drawable/locatelogo"
        app:showAsAction="always" />
</menu>
